--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-   <link rel="icon" type="image/x-icon" href="/assets/Gz4C.png">
+  <link rel="icon" type="image/x-icon" href="/assets/Gz4C.png">
   <title>Amazon NLRB Emailer</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://use.typekit.net/koo3vke.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J17CEHNC8C"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-J17CEHNC8C');
+  </script>
 </head>
 
 <body>
