--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         words!
       </p>
       <div class="button" id="clickMe">
-        <h2>SEND <br>AN EMAIL</h2>
+        <h2>CLICK HERE TO <br>SEND AN EMAIL</h2>
       </div>
     </div>
   
